# CoffeeTransfomer-

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  pretrain_10m.yaml  pretrain_5m.yaml  pretrain_a.yaml  pretrain_b.yaml  pretrain_gelu_s0.yaml  pretrain_gelu_s1.yaml  pretrain_swiglu_s0.yaml  pretrain_swiglu_s1.yaml  run_sft100_rl0.yaml  run_sft50_rl50.yaml  run_sft75_rl25.yaml  run_sft90_rl10.yaml  run_uspto_crude.yaml
data/: README.md
docs/: PIPELINE.md
scripts/: build_reactions_jsonl.py  export_to_hub.py  fetch_data.py  make_tarball.sh  preflight.py  prepare_corpus.py  pretokenize_molecules.py  pretrain.py  run_grpo.py  run_sft.py  select_and_sweep.py  sweep_sft_ratio.py
src/coffee_transformer/: __init__.py
src/coffee_transformer/data/: __init__.py  augment.py  collate.py  corpus.py  dataset.py  slots.py  synthetic.py  tagging.py  tokenizer.py
src/coffee_transformer/eval/: __init__.py  metrics.py  ttc.py
src/coffee_transformer/losses/: __init__.py  combined.py  distributional.py  moments.py  pairwise.py
src/coffee_transformer/models/: __init__.py  attention.py  config.py  embeddings.py  heads.py  recurrent_depth.py  transformer.py
src/coffee_transformer/training/: __init__.py  builder.py  checkpoint.py  grpo.py  pretrain.py  pretrain_pipeline.py  probe.py  sft.py  splits.py
src/coffee_transformer/utils/: __init__.py  config.py  device.py  seed.py
tests/: test_losses.py  test_model.py  test_pipeline.py  test_pretrain.py  test_tagging.py  test_tokenizer.py
