[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-transformer"
version = "0.0.1"
description = "Small-scale recurrent-depth transformers for chemical reaction yield prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
chem = ["rdkit>=2023.9", "pandas>=2.0", "openpyxl>=3.1"]
track = ["wandb>=0.16"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
